# drops

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
drops/: __init__.py
drops/cmd/: server.py
drops/common/: decorators.py  importutils.py
drops/persistence/: __init__.py  base.py  redis.py
drops/registers/: __init__.py  base.py  redis.py
drops/scheduler/: rpc.py
drops/scheduler/middleware/: persistence.py
drops/worker/: base.py  console.py
etc/: drops.conf
requirements/: default.txt  test.txt
tools/scripts/: load.py  send.py
