[metadata]
name = drops
version = 0.1
author = Flavio @flaper87 Percoco
author-email = flaper87@flaper87.org
summary = Drops Execution System
description-file =
    README.md
home-page = https://github.com/flaper87/drops
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7


[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts = 
    drops-server=drops.cmd.server:run
drops.middleware = 
    persistence=drops.scheduler.middleware.persistence:PersistenceMiddleware
drops.persistence = 
    redis=drops.persistence.redis:Driver
drops.registers = 
    redis=drops.registers.redis:Redis
drops.workers = 
    console=drops.worker.console:Console

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = drops/locale
domain = drops

[update_catalog]
domain = drops
output_dir = drops/locale
input_file = drops/locale/drops.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = drops/locale/drops.pot

[nosetests]
# NOTE(flaper87) To run the test suite under nose install the following
#                coverage http://pypi.python.org/pypi/coverage
#                tissue http://pypi.python.org/pypi/tissue (pep8 checker)
#                openstack-nose https://github.com/jkoelker/openstack-nose
verbosity=2
cover-package = drops
cover-html = true
cover-erase = true
